<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
		<string name="app_name">ChatSecure</string>
		<string name="im_label">ChatSecure</string>
		<string name="ro_perm_label">read instant messages</string>
		<string name="ro_perm_desc">Allows applications to read data from the IM content provider.</string>
		<string name="wo_perm_label">write instant messages</string>
		<string name="wo_perm_desc">Allows applications to write data to the IM content provider.</string>
		<string name="perm_label">start IM service</string>
		<string name="perm_desc">Allows applications to start IM service via intent.</string>
		<string name="confirm">Confirm</string>
		<string name="ok">OK</string>
		<string name="cancel">Cancel</string>
		<string name="yes">OK</string>
		<string name="no">Cancel</string>
	<string name="btn_next">Next</string>
	<string name="btn_back">Back</string>
    <string name="connect">Connect</string>
    <string name="lock_screen_open">Open</string>
    <string name="title_activity_lock_screen">ChatSecure Locked</string>
    <string name="lock_screen_create_passphrase">Set Password</string>
    <string name="lock_screen_confirm_passphrase">Confirm Password</string>
	<string name="lock_screen_passphrase_hint">Password</string>
	<string name="lock_screen_passphrase_not_set_enter">New Password</string>
	<string name="lock_screen_passphrase_not_set_confirm">Confirm New Password</string>
	<string name="lock_screen_passphrases_not_matching">Password did not match, please try again</string>
	<string name="lock_screen_skip">I\'m Feeling Lazy (No Password!)</string>
		<string name="app_passphrase_view_title_dialog">Information Prompt</string>
		<string name="app_passphrase_view_password_question">Enter Password Please</string>
		<string name="landing_page_title">Select an account</string>
		<string name="choose_account_title">Select an account</string>
		<string name="conversations">(<xliff:g id="number" example="27">%1$d</xliff:g>)</string>
		<string name="add_account">Add <xliff:g id="account">%1$s</xliff:g> account</string>
		<string name="menu_about">About</string>
		<string name="menu_sign_out_all">Sign out all</string>
		<string name="signout_all_confirm_message">Do you want to sign out all services?</string>
		<string name="signed_out_prompt">You have been signed out of <xliff:g id="account">%1$s</xliff:g>.</string>
		<string name="signed_out_prompt_with_error">You have been signed out of <xliff:g id="account">%1$s</xliff:g> because <xliff:g id="reason">%2$s</xliff:g></string>
		<string name="welcome_first">First time using ChatSecure?</string>
		<string name="welcome_skip">Can\'t wait to get started?</string>
		<string name="welcome_about">Get Started</string>
		<string name="welcome_account">Account Setup</string>
    <string name="setup_passphrase_title">Passphrase Setup</string>
	<string name="setup_passphrase">Before you get started please choose a secure passphrase to protect your ChatSecure data from unjust access.</string>
    <string name="setup_passphrase_label1">Passphrase:</string>
    <string name="setup_passphrase_label2">Passphrase (again):</string>
     <string name="rekey_message">Enter a *new* passphrase. It must contain at least one uppercase, one lowercase and one number, and be longer than six characters.</string>
    <string name="do_rekey">Encrypting your existing notes with the new passphrase (patience...)</string>
    <string name="enter_pass">Enter your passphrase:</string>
    <string name="new_pass">Welcome! Enter a strong passphrase to secure your notes. It must contain at least one uppercase, one lowercase and one number, and be longer than six characters.</string>
    <string name="pass_err_length">Your passphrase was not long enough</string>
    <string name="pass_err_upper">Your passphrase did not contain any uppercase letters</string>
    <string name="pass_err_lower">Your passphrase did not contain any lowercase letters</string>
    <string name="pass_err_num">Your passphrase did not contain any numbers</string>
		<string name="about_welcome_title">About ChatSecure</string>
		<string name="about_welcome">ChatSecure is a mobile instant messaging app that provides extra security features that prevent others from snooping on your conversations and communications.\n\nThe app supports any chat service that uses the Jabber or XMPP protocol, such as Google GTalk or Jabber.org.</string>
		<string name="about_otr_title">How is it secure?</string>
		<string name="about_otr">\'Off-the-Record Messaging\' is a security system designed to enable privacy by mimicking the characteristics of a private conversation in the real world, including Encryption, Authentication, Deniability and Forward Secrecy.\n\nThe OTR-protocol is compatible with desktop chat clients such as Adium or Pidgin.</string>
		<string name="about_security_title">Are My Chats Secure?</string>
		<string name="about_security">ChatSecure\'s chat encryption feature only works when messaging with others using a compatible app or program, so you should ensure your contacts are using ChatSecure for mobile and Adium or Pidgin for the desktop. You can fine-tune exactly how and when ChatSecure attempts to encrypt your chats in Account Settings.\n\nLet\'s get started!</string>
		<string name="menu_new_account">New Account</string>
		<string name="menu_add_account">Add account</string>
		<string name="menu_edit_account">Edit account</string>
		<string name="menu_remove_account">Remove account</string>
    <string name="btn_create_account">Create Account</string>
		<string name="menu_use_existing_account">Existing Account</string>
		<string name="menu_create_account">Create Account</string>
		<string name="label_username">User@Host</string>
		<string name="label_password">Password:</string>
		<string name="remember_password">Remember my password.</string>
		<string name="keep_me_signed_in">Sign me in automatically.</string>
		<string name="sign_up">Don\u2019t have an account?</string>
		<string name="sign_in">Sign in</string>
		<string name="check_save_password">For your security, if your phone is lost or stolen, go to the Web site on your computer and change your password.</string>
		<string name="check_auto_sign_in">This option automatically signs you in every time you open this application. To disable the option, sign out, then clear the \"Sign me in automatically\" check box.</string>
		<string name="use_tor">Connect via Tor (Requires Orbot app)</string>
    <string name="account_setup_example_email_address">user@domain.com</string>
    <string name="account_setup_new_username">new username</string>
    <string name="account_setup_service_provider">service provider (dukgo.com, jabber.ccc.de)</string>
    <string name="account_setup_password">password</string>
    <string name="account_setup_password_confirm">confirm password</string>
    <string name="account_setup_advanced_button">Advanced Account Settings</string>
    <string name="account_select_type">Account Type</string>
    <string name="btn_create_new_account">Register Account</string>
	<string name="account_setup_pers_sub">Persistence</string>
	<string name="account_setup_pers_pw_title">Remember Password</string>
	<string name="account_setup_pers_pw_on">Password cached</string>
	<string name="account_setup_pers_pw_off">Password not cached</string>
	<string name="account_setup_pers_auto_title">Automatically Sign In</string>
	<string name="account_setup_pers_auto_on">Connect at ChatSecure start-up</string>
	<string name="account_setup_pers_auto_off">Don\'t connect at ChatSecure start-up</string>
	<string name="account_setup_pers_now_title">Sign In Now</string>
	<string name="account_setup_pers_now_on">Connect following account setup</string>
	<string name="account_setup_pers_now_off">Don\'t connect following account setup</string>
	<string name="account_setup_personal_sub">Personal (optional)</string>
    <string name="account_setup_personal_alias_title">Account Alias (your name)</string>
    <string name="account_setup_personal_alias_sub">How your account appears online</string>
    <string name="account_setup_personal_profile_title">Profile</string>
    <string name="account_setup_personal_profile_sub">A brief blurb about yourself</string>
    <string name="account_setup_advanced_enc_force">Force encryption / refuse plaintext</string>
    <string name="account_setup_advanced_enc_auto">When possible, encrypt chats automatically</string>
    <string name="account_setup_advanced_enc_req">Encrypt chats as requested</string>
	<string name="account_setup_advanced_enc_off">Disable chat encryption</string>
	<string name="account_setup_signin_a">Validating credentials...</string>
	<string name="account_setup_signin_b">Generating keypair...</string>
	<string name="account_setup_signin_c">Signing in...</string>
	<string name="account_wizard_setup_title">Account Wizard</string>
	<string name="account_wizard_account_title">Your Account ID</string>
	<string name="account_wizard_host_title">Configure Server</string>
	<string name="account_wizard_ready_title">Are You Ready?</string>
	<string name="account_wizard_setup_body">Enter your account ID to configure ChatSecure for your XMPP chat service. It looks like an email address:</string>
	<string name="account_wizard_account_body">Please enter your account ID (user@hostname):</string>
	<string name="account_wizard_host_body">Please enter or edit your jabber/xmpp chat server hostname and port number (5222 is default).</string>
	<string name="account_wizard_ready_body">ChatSecure has been configured, and now it is time to connect to your service, and start chatting safely, securely and privately!</string>
	 <string name="_via_orbot">"Orbot (Tor)"</string>
    <string name="select_domain_new_account">Choose a domain</string>
    <string name="registering_new_account_">Registering new account...</string>
		<string name="signing_in_to">getting the ChatSecure going...</string>
		<string name="menu_cancel_signin">Cancel signin</string>
		<string name="signing_in_wait">Signing in\u2026</string>
		<string name="signing_out_wait">Signing out\u2026</string>
	<string name="do_srv_lookup">Do SRV Lookup</string>
	<string name="use_dns_srv_to_find_actual_xmpp_server_from_domain_name">Use DNS SRV to find actual XMPP server from domain name</string>
	<string name="allow_the_username_and_password_to_be_sent_as_plain_text_when_using_an_unencrypted_transport">Allow the username and password to be sent as plain text when using an unencrypted transport</string>
	<string name="allow_plain_text_auth">Allow Plain Text Auth</string>
	<string name="verify_that_the_certificate_is_trusted">Verify that the certificate is trusted</string>
		<string name="menu_add_contact">Add contact</string>
		<string name="menu_view_blocked">Blocked</string>
		<string name="menu_new_chat">New Chat</string>
		<string name="menu_search_contacts">Search Contacts</string>
    <string name="menu_show_grid">Show Grid</string>
		<string name="menu_view_profile">View Profile</string>
		<string name="menu_verify">Verify Key</string>
		<string name="menu_send_image">Send Photo</string>
		<string name="menu_send_file">Send File</string>
		<string name="menu_send_audio">Send Audio</string>
		<string name="menu_take_picture">Take Picture</string>
		<string name="menu_end_conversation">End chat</string>
    <string name="menu_new_group_chat">Group Chat</string>
		<string name="menu_otr_start">Start Encryption</string>
		<string name="menu_otr_stop">Stop Encryption</string>
		<string name="label_fingerprint_local">Security Fingerprint</string>
	<string name="menu_import_keys">Activate KeySync</string>
		<string name="menu_exit">Exit</string>
		<string name="default_service_provider">dukgo.com</string>
		<string name="menu_sidebar_qr">Fingerprint</string>
		<string name="menu_settings">Settings</string>
		<string name="menu_view_accounts">Accounts</string>
		<string name="menu_sign_out">Sign out</string>
</resources>