<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_invite_user"
        android:title="@string/menu_add_contact"
        android:icon="@*android:drawable/ic_menu_invite" />

    <item android:id="@+id/menu_blocked_contacts"
        android:title="@string/menu_view_blocked"
        android:icon="@*android:drawable/ic_menu_blocked_user" />

    <item android:id="@+id/menu_view_accounts"
        android:title="@string/menu_view_accounts"
        android:icon="@*android:drawable/ic_menu_account_list" />

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences" />

    <item android:id="@+id/menu_sign_out"
        android:title="@string/menu_sign_out"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
</menu>
