<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    
     <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings" 
        android:icon="@drawable/ic_menu_settings"
         android:showAsAction="never"
         />
     
         <item android:id="@+id/menu_view_profile"
        android:title="@string/menu_verify"
        android:icon="@drawable/ic_nav_preferences"
         android:showAsAction="always"
         />
    
     <group android:enabled="true" android:id="@+id/menu_group_otr_off" android:visible="false">
        
         <item 
        android:title="@string/menu_otr_start"
         android:icon="@drawable/ic_white_unencrypted"
          android:showAsAction="always"
        >
        
             <menu>
                    <item android:id="@+id/menu_otr"
        android:title="@string/menu_otr_start"
         android:icon="@drawable/ic_white_encrypted_and_verified"
          android:showAsAction="always"
        />
                 
             </menu>
             
         </item>
         </group>
  
  <group android:enabled="true" android:id="@+id/menu_group_otr_unverified" android:visible="false">
        
         <item 
        android:title="@string/menu_otr_start"
         android:icon="@drawable/ic_white_encrypted_not_verified"
          android:showAsAction="always"
        > <menu>
            
            
         <item android:id="@+id/menu_view_profile"
        android:title="@string/menu_verify"
        android:icon="@drawable/ic_white_encrypted_not_verified"
         android:showAsAction="always"
         />
            
        <item android:id="@+id/menu_otr"
        android:title="@string/menu_otr_stop"
         android:icon="@drawable/ic_white_unencrypted"
          android:showAsAction="always"
        />
        
            </menu>
             
             
         </item>
         </group>
         
    <group android:enabled="true" android:id="@+id/menu_group_otr_verified" android:visible="false">
        
         <item 
        android:title="@string/menu_otr_stop"
         android:icon="@drawable/ic_white_encrypted_and_verified"
          android:showAsAction="always"
        >
              <menu>
         <item android:id="@+id/menu_view_profile"
        android:title="@string/menu_view_profile"
        android:icon="@drawable/ic_white_encrypted_not_verified"
         android:showAsAction="always"
         />
    
        <item android:id="@+id/menu_otr"
        android:title="@string/menu_otr_stop"
         android:icon="@drawable/ic_white_unencrypted"
          android:showAsAction="always"
        />
        
            </menu>
             
         </item>
         </group>
     
    <group android:enabled="true" android:id="@+id/menu_group_chats" android:visible="false">
        
        
        
  
    <item 
        android:title="@string/menu_send_file"
         android:showAsAction="always"
         android:icon="@drawable/content_new_attachment"
        >
        <menu>
              <item android:id="@+id/menu_send_file"
        android:title="@string/menu_send_file"
        
         android:icon="@drawable/content_new_attachment"
        />
            
               <item android:id="@+id/menu_send_image"
        android:title="@string/menu_send_image"
         android:showAsAction="always"
         
         android:icon="@drawable/content_new_picture"
        />
               
                  <item android:id="@+id/menu_take_picture"
        android:title="@string/menu_take_picture"
         android:showAsAction="always"
         
         android:icon="@drawable/content_take_picture"
        />
               
                  <item android:id="@+id/menu_send_audio"
        android:title="@string/menu_send_audio"
         android:showAsAction="always"
         
         android:icon="@drawable/content_new_audio"
        />
        </menu>
       </item>
  
    <item android:id="@+id/menu_end_conversation"
        android:title="@string/menu_end_conversation" 
        android:icon="@drawable/ic_menu_close"
         android:showAsAction="never"
        
         />
    
    <!-- 
     <item android:id="@+id/menu_delete_conversation"
        android:title="@string/menu_clear_chat" 
        android:icon="@drawable/ic_menu_trash"
         android:showAsAction="never"
        
         />
          -->
    </group>
    
 <group android:enabled="true" android:id="@+id/menu_group_contacts" android:visible="true">
   
     <item android:id="@+id/menu_new_chat"
        android:title="@string/menu_new_chat" 
              android:icon="@drawable/ic_menu_msg_compose"
                android:showAsAction="always"
        
        />
     
     <item
    android:id="@+id/menu_search"
    android:actionViewClass="com.actionbarsherlock.widget.SearchView"
    android:icon="@drawable/ic_menu_search"
    android:showAsAction="ifRoom|collapseActionView"
    android:title="@string/menu_search_contacts"/>
         
     <item android:id="@+id/menu_grid"
        android:title="@string/menu_show_grid" 
        android:icon="@drawable/ic_menu_grid"
         android:showAsAction="always"/>
    
    
     </group>
<!--

    <item android:id="@+id/menu_block_contact"
        android:title="@string/menu_block_contact" />

    <item android:id="@+id/menu_invite_contact"
        android:title="@string/menu_invite_contact" />
 -->
  
</menu>
