<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->


<menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <group android:enabled="true" android:id="@+id/menu_group_otr_off" android:visible="false">
        
       <item 
        android:title="@string/menu_otr_start"
         android:icon="@drawable/ic_white_unencrypted"
          app:showAsAction="always"
        >
        <menu>
         <item 
        android:title="@string/menu_otr_start"
         android:icon="@drawable/ic_white_encrypted_and_verified"
          app:showAsAction="always"
           android:id="@+id/menu_otr"
        />
        
             <item android:id="@+id/menu_verify_or_view"
        android:title="@string/menu_verify"
        android:icon="@drawable/ic_white_encrypted_not_verified"
         app:showAsAction="always"
         />
             
        </menu>
         </item>
         
         
         </group>
     <group android:enabled="true" android:id="@+id/menu_group_otr_unverified" android:visible="false">
        
         <item 
        android:title="@string/menu_otr_start"
         android:icon="@drawable/ic_white_encrypted_not_verified"
          app:showAsAction="always"
        > <menu>
            
            
         <item android:id="@+id/menu_verify_or_view"
        android:title="@string/menu_verify"
        android:icon="@drawable/ic_white_encrypted_not_verified"
         app:showAsAction="always"
         />
         
         <item android:id="@+id/menu_show_qr"
        android:title="@string/menu_sidebar_qr"
        android:icon="@drawable/ic_white_encrypted_not_verified"
         app:showAsAction="always"
         />
         
        <item android:id="@+id/menu_otr_stop"
        android:title="@string/menu_otr_stop"
         android:icon="@drawable/ic_white_unencrypted"
          app:showAsAction="always"
        />
        
            </menu>
             
             
         </item>
         
         
         </group>
         
    <group android:enabled="true" android:id="@+id/menu_group_otr_verified" android:visible="false">
        
         <item 
        android:title="@string/menu_otr_stop"
         android:icon="@drawable/ic_white_encrypted_and_verified"
          app:showAsAction="always"
        >
              <menu>
         <item android:id="@+id/menu_view_profile_verified"
        android:title="@string/menu_view_profile"
        android:icon="@drawable/ic_white_encrypted_and_verified"
         app:showAsAction="always"
         />
         
         <item android:id="@+id/menu_show_qr"
        android:title="@string/menu_sidebar_qr"
        android:icon="@drawable/ic_white_encrypted_and_verified"
         app:showAsAction="always"
         /> 
         
        <item android:id="@+id/menu_otr_stop_verified"
        android:title="@string/menu_otr_stop"
         android:icon="@drawable/ic_white_unencrypted"
          app:showAsAction="always"
        />
        
            </menu>
             
         </item>
         
         </group>
     
    <group android:enabled="true" android:id="@+id/menu_group_chats" android:visible="false">
        
        
        
  <!--  
    <item 
        android:title="@string/menu_send_file"
         app:showAsAction="always"
         android:icon="@drawable/content_new_attachment"
        >
        <menu>
              <item android:id="@+id/menu_send_file"
        android:title="@string/menu_send_file"
        
         android:icon="@drawable/content_new_attachment"
        />
            
               <item android:id="@+id/menu_send_image"
        android:title="@string/menu_send_image"
         app:showAsAction="always"
         
         android:icon="@drawable/content_new_picture"
        />
               
                  <item android:id="@+id/menu_take_picture"
        android:title="@string/menu_take_picture"
         app:showAsAction="always"
         
         android:icon="@drawable/content_take_picture"
        />
               
                  <item android:id="@+id/menu_send_audio"
        android:title="@string/menu_send_audio"
         app:showAsAction="always"
         
         android:icon="@drawable/content_new_audio"
        />
        </menu>
       </item>
   -->
    <item android:id="@+id/menu_end_conversation"
        android:title="@string/menu_end_conversation" 
        android:icon="@drawable/ic_menu_close"
         app:showAsAction="never"
        
         />
    
    
    </group>
     
    
 <group android:enabled="true" android:id="@+id/menu_group_contacts" android:visible="true">
   
     <item android:id="@+id/menu_new_chat_top"
        android:title="@string/menu_new_chat" 
              android:icon="@drawable/ic_action_new"
                app:showAsAction="always"
        
        >
         <menu>
              <item android:id="@+id/menu_new_chat"
        android:title="@string/menu_new_chat" 
              android:icon="@drawable/ic_action_new"
                app:showAsAction="always"
        
        />
              
              <item android:id="@+id/menu_add_contact"
        android:title="@string/menu_add_contact" 
              android:icon="@drawable/social_add_person"
                app:showAsAction="never"
        
        />
     
              
      <item android:id="@+id/menu_group_chat"
        android:title="@string/menu_new_group_chat" 
              android:icon="@drawable/social_add_person"
                app:showAsAction="never"
        
        />
              
         </menu>
         
     </item>
     
     
     
     
  <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings" 
        android:icon="@android:drawable/ic_menu_preferences"
         app:showAsAction="never"
         />
  <!-- 
      <item android:id="@+id/menu_view_accounts"
        android:title="@string/menu_add_account"
                app:showAsAction="never"
        />
       -->
          <item android:id="@+id/menu_import_keys"
     
        android:title="@string/menu_import_keys"
                android:icon="@drawable/ic_menu_key"
                 app:showAsAction="never|withText"
         
         />
    
     
        </group>
        
   
     
     
      <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
                app:showAsAction="never"
        />
     
     
      
  
</menu>
