<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/acct_act_scrollview"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:fillViewport="true">
			
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" android:layout_gravity="fill_vertical">
	
	    <EditText android:id="@+id/edtName"
	        android:selectAllOnFocus="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
 	        android:hint="@string/account_setup_new_username"
	        android:autoLink="none"
	        android:autoText="false"
	        android:capitalize="none"
	        android:cursorVisible="true"
	        android:inputType="textEmailAddress"/>
	
	     <EditText android:id="@+id/edtService"
	        android:selectAllOnFocus="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
 	        android:hint="@string/account_setup_service_provider"
 	        android:text="@string/default_service_provider"
	        android:autoLink="none"
	        android:autoText="false"
	        android:capitalize="none"
	        android:cursorVisible="true"
	        android:inputType="textEmailAddress"/>
	     
	    <EditText android:id="@+id/edtPass"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/account_setup_password"
	        android:autoText="false"
	        android:selectAllOnFocus="true" android:inputType="textPassword"/>
	    
	      <EditText android:id="@+id/edtPassConfirm"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/account_setup_password_confirm"
	        android:autoText="false"
	        android:selectAllOnFocus="true" android:inputType="textPassword"/>
	        
	  <LinearLayout 	    android:orientation="vertical"
	       android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:layout_height="20dip"></LinearLayout>
	
	  <CheckBox android:id="@+id/useTor"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/use_tor"
	
	android:paddingTop="3sp"
	android:paddingBottom="3sp"
	
	   android:textAppearance="?android:attr/textAppearanceSmall"
	
	         />
	  
	  <LinearLayout 	    android:orientation="vertical"
	       android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:layout_height="20dip"></LinearLayout>
	
	  <Button android:id="@+id/btnAdvanced"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="3dip"
	                android:text="@string/account_setup_advanced_button" android:layout_width="fill_parent"/>
	 
	 
	                <!-- 
	    <TextView android:id="@+id/signUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="4dip"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	         -->
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<Button android:id="@+id/btnSignIn"
			android:text="@string/btn_create_new_account"
			android:background="@drawable/btn_green"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dip"
			android:layout_width="fill_parent"
			android:layout_gravity="bottom" 
			style="@style/btn_white"
			/>
	</LinearLayout>
	</LinearLayout>
</ScrollView>
