<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/acct_act_scrollview"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:fillViewport="true">
			
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:padding="10dp" android:layout_gravity="fill_vertical">
	
	    <info.guardianproject.otr.app.lang.BhoEditText android:id="@+id/edtName"
	        android:selectAllOnFocus="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
 	        android:hint="@string/account_setup_example_email_address"
	        android:autoLink="none"
	        android:autoText="false"
	        android:capitalize="none"
	        android:cursorVisible="true"
	        android:inputType="textEmailAddress"/>
	
	    <info.guardianproject.otr.app.lang.BhoEditText android:id="@+id/edtPass"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/account_setup_password"
	        android:autoText="false"
	        android:selectAllOnFocus="true" android:inputType="textPassword"/>
	        
	    <info.guardianproject.otr.app.lang.BhoCheckBox android:id="@+id/rememberPassword"
	android:textAppearance="?android:attr/textAppearanceSmall"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:text="@string/remember_password" />
	
	  <info.guardianproject.otr.app.lang.BhoCheckBox android:id="@+id/useTor"
  		android:textSize="13sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:text="@string/use_tor" />
	  <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:layout_height="20dip"></LinearLayout>
	
	  <info.guardianproject.otr.app.lang.BhoButton android:id="@+id/btnAdvanced"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="3dip"
	                android:text="@string/account_setup_advanced_button" android:layout_width="wrap_content"/>
	                
	                
	 
	  <info.guardianproject.otr.app.lang.BhoTextView android:id="@+id/lblFingerprint"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:text="@string/label_fingerprint_local"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:visibility="gone"
	        />
	 <info.guardianproject.otr.app.lang.BhoTextView android:id="@+id/txtFingerprint"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="13sp"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        
	        />
	 
	                <!-- 
	    <TextView android:id="@+id/signUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="4dip"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	         -->
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<info.guardianproject.otr.app.lang.BhoButton android:id="@+id/btnSignIn"
			android:text="@string/sign_in"
			android:background="@drawable/btn_green"
			android:layout_height="wrap_content"
			android:layout_marginTop="3dip"
			android:layout_width="fill_parent"
			android:layout_gravity="bottom" 
			style="@style/btn_white"
			/>
	</LinearLayout>
	</LinearLayout>
</ScrollView>
